@@ -1,0 +1,29 @@
+.. Professor documentation master file, created by
+   sphinx-quickstart on Thu Dec  3 18:13:23 2015.
+   You can adapt this file completely to your liking, but it should at least
+   contain the root `toctree` directive.
+
+professor
+=========
+
+Contents:
+
+.. toctree::
+   :maxdepth: 4
+   :hidden:
+
+   install
+    
+
+
+
+Indices and tables
+==================
+
+* :ref:`genindex`
+* :ref:`modindex`
+* :ref:`search`
+
+
+Tutorial
+--------
